cmake_minimum_required (VERSION 2.8)
##
## CMakeLists for Kester Duncan's Coaching Solution Project
##
## Copyright (c) 2016, KDuncan
## All Rights Reserved.
##
##----------------------------------------------------#
project (KDCoachingSolution)
add_executable (KDCoachingSolution main.cpp rbtree.h rbtree.hpp kdset.h integer_sum.h)  
	
